fix name overlap in smaller screens

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ h2 {
   color: #fff;
   position: absolute;
   left: 49.2%;
-  top: 10%;
   transform: translateX(-50%);
   white-space: nowrap;
   z-index: 1;
@@ -140,7 +139,11 @@ h2 {
 
 @media(max-width: 800px) {
   h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
   }
 
   .button {
